--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,7 +31,48 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:textAlignment="center"
-            android:textSize="56dp" />
+            android:textSize="56dp"
+            tools:ignore="RtlCompat" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="bottom|center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/resetea"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="resetearContador"
+                android:shadowColor="#2196F3"
+                android:text="Resetear"
+                android:textColor="#2196F3"
+                android:textSize="20sp"
+                app:rippleColor="#2196F3"
+                app:strokeColor="#2196F3"
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:id="@+id/textoReseteo"
+                android:layout_width="72sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:cursorVisible="false"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:hint="0"
+                android:inputType="numberSigned|textPersonName" />
+
+            <CheckBox
+                android:id="@+id/validar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Conteo negativo"
+                android:textSize="20sp"
+                android:onClick="conteoNegativos"/>
+        </LinearLayout>
 
 
     </LinearLayout>
@@ -73,26 +114,6 @@
             app:strokeColor="#DF1010"
             tools:ignore="MissingConstraints" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom|center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/resetea"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="resetearContador"
-            android:shadowColor="#2196F3"
-            android:text="Resetear"
-            android:textColor="#2196F3"
-            android:textSize="34sp"
-            app:rippleColor="#2196F3"
-            app:strokeColor="#2196F3"
-            tools:ignore="MissingConstraints" />
     </LinearLayout>
 
 </RelativeLayout>
