--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Conteo negativo"
+                android:text="No permitir negativos"
                 android:textSize="20sp"
                 android:onClick="conteoNegativos"/>
         </LinearLayout>
