--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -71,7 +71,7 @@
                 android:layout_weight="1"
                 android:text="No permitir negativos"
                 android:textSize="20sp"
-                android:onClick="conteoNegativos"/>
+                android:onClick="decrementarContador"/>
         </LinearLayout>
 
 
